Added automatic par rate calculation
